--- a/TestingPlatform.Infrastructure.csproj
+++ b/TestingPlatform.Infrastructure.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 	  <PackageReference Include="AutoMapper" Version="15.1.0" />
 	  <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
 	    <PrivateAssets>all</PrivateAssets>
